<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <url>https://github.com/laravieira/Willy</url>

  <groupId>me.laravieira</groupId>
  <artifactId>willy</artifactId>
  <version>0.16.0</version>
  <packaging>jar</packaging>

  <name>Willy</name>
  <description>A cute discord bot</description>

  <properties>
  	<maven.compiler.source>17</maven.compiler.source>
  	<maven.compiler.target>17</maven.compiler.target>
	<project.java.version>17</project.java.version>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.manifest.mainClass>me.laravieira.willy.Willy</project.manifest.mainClass>
    <slf4j.version>1.7.36</slf4j.version>
    <gson.version>2.8.9</gson.version>
    <jackson.version>2.13.4.1</jackson.version>
    <youtube.version>3.1.0</youtube.version>
    <bitly.version>0.8.0</bitly.version>
    <junit.version>4.13.2</junit.version>
    <snakeyaml.version>2.4</snakeyaml.version>
    <telegram.version>6.2.0</telegram.version>
    <whatsapp.version>3.0-RC26</whatsapp.version>
    <discord.bot.version>3.2.3</discord.bot.version>
    <discord.client.version>5.0.0-alpha.13</discord.client.version>
    <lavaplayer.version>1.3.78</lavaplayer.version>
    <watson.version>10.1.0</watson.version>
    <openai.version>0.8.0</openai.version>
    <maven.compile.version>3.10.1</maven.compile.version>
    <maven.assembly.version>3.3.0</maven.assembly.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compile.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven.assembly.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>${project.manifest.mainClass}</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <finalName>${project.artifactId}-${project.version}</finalName>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  
  <repositories>
    <repository>
      <id>jcentral-bitly</id>
      <name>Bitly Repository</name>
      <url>https://jcenter.bintray.com</url>
    </repository>
  	<repository>
      <id>maven-lavaplayer</id>
  	  <name>Lava Player Repository</name>
  	  <url>https://m2.dv8tion.net/releases</url>
  	</repository>
  	<repository>
      <id>jitpack.io</id>
      <name>Youtube Downloader and Whatsapp Repository</name>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>sonatype-public</id>
      <name>SnakeYAML repository</name>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <!-- https://search.maven.org/artifact/com.google.code.gson/gson/2.8.8/jar -->
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sealedtx/java-youtube-downloader -->
      <groupId>com.github.sealedtx</groupId>
      <artifactId>java-youtube-downloader</artifactId>
      <version>${youtube.version}</version>
    </dependency>
    <dependency>
      <!-- https://github.com/stackmagic/bitly-api-client -->
      <groupId>net.swisstech</groupId>
      <artifactId>bitly-api-client</artifactId>
      <version>${bitly.version}</version>
      <exclusions>
      	<exclusion>
      		<groupId>com.google.code.gson</groupId>
      		<artifactId>gson</artifactId>
      	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <dependency>
      <groupId>org.snakeyaml</groupId>
      <artifactId>snakeyaml-engine</artifactId>
      <version>${snakeyaml.version}</version>
    </dependency>
    <dependency>
      <!-- https://github.com/pengrad/java-telegram-bot-api -->
      <groupId>com.github.pengrad</groupId>
      <artifactId>java-telegram-bot-api</artifactId>
      <version>${telegram.version}</version>
    </dependency>
    <dependency>
      <!-- https://github.com/Auties00/WhatsappWeb4j -->
      <groupId>com.github.auties00</groupId>
      <artifactId>whatsappweb4j</artifactId>
      <version>${whatsapp.version}</version>
    </dependency>
    <dependency>
      <!-- https://github.com/Discord4J/Discord4J -->
      <groupId>com.discord4j</groupId>
      <artifactId>discord4j-core</artifactId>
      <version>${discord.bot.version}</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sedmelluq/lavaplayer -->
      <groupId>com.sedmelluq</groupId>
      <artifactId>lavaplayer</artifactId>
      <version>${lavaplayer.version}</version>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/com.ibm.watson/assistant -->
      <groupId>com.ibm.watson</groupId>
      <artifactId>assistant</artifactId>
      <version>${watson.version}</version>
      <exclusions>
        <exclusion>
          <groupId>com.google.code.gson</groupId>
          <artifactId>gson</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/api -->
    <dependency>
      <groupId>com.theokanning.openai-gpt3-java</groupId>
      <artifactId>client</artifactId>
      <version>${openai.version}</version>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <dependencies>
      <!-- https://mvnrepository.com/artifact/co  m.fasterxml.jackson.core/jackson-databind -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>${jackson.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
